deploy: QuantumPL/site@d5e8c32952a2acdf4ec54e01ade14a4005985b46

--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -134,6 +134,12 @@ The Heisenberg representation of quantum operators provides a powerful technique
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Kornell2021/>Quantum CPOs</a></h2>
+<div class=article-style>
+We introduce the monoidal closed category qCPO of quantum cpos, whose objects are \"quantized\" analogs of omega-complete partial orders (cpos). The category qCPO is enriched over the category CPO of cpos, and contains both CPO, and the opposite of …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></h2>
 <div class=article-style>
 As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs …
