--- a/publication/Danos2007/index.html
+++ b/publication/Danos2007/index.html
@@ -187,10 +187,10 @@ Journal article
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></li>
+<li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
 <li><a href=/bib/publication/Fu2020a/>A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
-<li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
 </ul>
 </div>
 </div>
