--- a/publication/Lee2021/index.html
+++ b/publication/Lee2021/index.html
@@ -132,6 +132,9 @@
 <span class=article-date>
 November 2021
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Lee2021/cite.bib>
@@ -178,14 +181,17 @@ Conference paper
 <a class="badge badge-light" href=/bib/tag/operational-semantics/>operational semantics</a>
 <a class="badge badge-light" href=/bib/tag/quantum-circuit-description-language/>quantum circuit description language</a>
 <a class="badge badge-light" href=/bib/tag/proto-quipper-l/>proto-quipper-l</a>
+<a class="badge badge-light" href=/bib/tag/proto-quipper-m/>proto-quipper-m</a>
+<a class="badge badge-light" href=/bib/tag/dynamic-lifting/>dynamic lifting</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
-<li><a href=/bib/publication/Rennela2018/>Classical Control and Quantum Circuits in Enriched Category Theory</a></li>
-<li><a href=/bib/publication/Lindenhovius2018/>Enriching a Linear/Non-Linear Lambda Calculus: A Programming Language for String Diagrams</a></li>
-<li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
+<li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
+<li><a href=/bib/publication/Kornell2021/>Quantum CPOs</a></li>
+<li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
+<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
+<li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
 </ul>
 </div>
 </div>
