--- a/publication/Paolini2017/index.html
+++ b/publication/Paolini2017/index.html
@@ -183,7 +183,7 @@ Conference paper
 <li><a href=/bib/publication/Paykin2017/>QWIRE: A Core Language for Quantum Circuits</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Rennela2018/>Classical Control and Quantum Circuits in Enriched Category Theory</a></li>
-<li><a href=/bib/publication/Fu2020a/>A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper</a></li>
+<li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
 </ul>
 </div>
 </div>
