--- a/publication/Rios2018/index.html
+++ b/publication/Rios2018/index.html
@@ -130,6 +130,9 @@
 <span class=article-date>
 February 2018
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rios2018/cite.bib>
@@ -171,6 +174,20 @@ Conference paper
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/proto-quipper-m/>proto-quipper-m</a>
+<a class="badge badge-light" href=/bib/tag/quipper/>quipper</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
+<li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
+<li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
+<li><a href=/bib/publication/Kornell2021/>Quantum CPOs</a></li>
+<li><a href=/bib/publication/Valiron2015/>Programming the Quantum Future</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
