--- a/publication/Rios2021/index.html
+++ b/publication/Rios2021/index.html
@@ -131,7 +131,7 @@ August 2021
 </span>
 <span class=middot-divider></span>
 <span class=article-categories>
-<i class="fas fa-folder mr-1"></i><a href=/bib/category/PhD-Thesis/>PhD Thesis</a></span>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/PhD-Thesis/>PhD Thesis</a>, <a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rios2021/cite.bib>
@@ -169,15 +169,16 @@ Thesis
 <a class="badge badge-light" href=/bib/tag/proto-quipper-m/>proto-quipper-m</a>
 <a class="badge badge-light" href=/bib/tag/category-theory/>category theory</a>
 <a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
+<a class="badge badge-light" href=/bib/tag/quipper/>quipper</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></li>
-<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
-<li><a href=/bib/publication/Paykin2017/>QWIRE: A Core Language for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
+<li><a href=/bib/publication/Green2013/>Quipper: A Scalable Quantum Programming Language</a></li>
+<li><a href=/bib/publication/Ross2015/>Algebraic and Logical Methods in Quantum Computation</a></li>
 </ul>
 </div>
 </div>
