--- a/publication/Ross2015/index.html
+++ b/publication/Ross2015/index.html
@@ -131,7 +131,7 @@ August 2015
 </span>
 <span class=middot-divider></span>
 <span class=article-categories>
-<i class="fas fa-folder mr-1"></i><a href=/bib/category/PhD-Thesis/>PhD Thesis</a></span>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/PhD-Thesis/>PhD Thesis</a>, <a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Ross2015/cite.bib>
@@ -162,6 +162,20 @@ Thesis
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/proto-quipper/>proto-quipper</a>
+<a class="badge badge-light" href=/bib/tag/quipper/>quipper</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
+<li><a href=/bib/publication/Valiron2015/>Programming the Quantum Future</a></li>
+<li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
+<li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
+<li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
