--- a/publication/Valiron2015/index.html
+++ b/publication/Valiron2015/index.html
@@ -133,6 +133,9 @@
 <span class=article-date>
 July 2015
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Valiron2015/cite.bib>
@@ -180,7 +183,10 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Ross2015/>Algebraic and Logical Methods in Quantum Computation</a></li>
+<li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
 <li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
+<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Green2013/>Quipper: A Scalable Quantum Programming Language</a></li>
 </ul>
 </div>
