--- a/404.html
+++ b/404.html
@@ -123,16 +123,16 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
+<li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
 <li><a href=/bib/event/>Recent & Upcoming Events</a></li>
 <li><a href=/bib/event/pop22/>Quantum at POPL 2022</a></li>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
 <li><a href=/bib/publication/Jia2022/>Semantics for Variational Quantum Programming</a></li>
 <li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
-<li><a href=/bib/publication/>Publications</a></li>
 <li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 <li><a href=/bib/post/>Posts</a></li>
 <li><a href=/bib/post/pronunciation-guide/>A Quantum PL Pronunciation Guide</a></li>
-<li><a href=/bib/post/eoy-2021-updates/>End of Year 2021 Updates</a></li>
 </ul>
 </div>
 </div>
