--- a/publication/Green2013/index.html
+++ b/publication/Green2013/index.html
@@ -133,6 +133,9 @@
 <span class=article-date>
 June 2013
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Green2013/cite.bib>
@@ -185,11 +188,11 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Valiron2015/>Programming the Quantum Future</a></li>
-<li><a href=/bib/publication/Paolini2017/>qPCF: A Language for Quantum Circuit Computations</a></li>
-<li><a href=/bib/publication/Green2013a/>An Introduction to Quantum Programming in Quipper</a></li>
-<li><a href=/bib/publication/Fu2020a/>A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper</a></li>
-<li><a href=/bib/publication/Danos2007/>The Measurement Calculus</a></li>
+<li><a href=/bib/publication/Ross2015/>Algebraic and Logical Methods in Quantum Computation</a></li>
+<li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
+<li><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></li>
 </ul>
 </div>
 </div>
