--- a/publication/Green2013a/index.html
+++ b/publication/Green2013a/index.html
@@ -133,6 +133,9 @@
 <span class=article-date>
 July 2013
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Green2013a/cite.bib>
