--- a/publication/Mahmoud2019/index.html
+++ b/publication/Mahmoud2019/index.html
@@ -130,6 +130,9 @@
 <span class=article-date>
 December 2019
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Mahmoud2019/cite.bib>
@@ -174,6 +177,24 @@ Journal article
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/proto-quipper/>proto-quipper</a>
+<a class="badge badge-light" href=/bib/tag/quantum-programming-languages/>quantum programming languages</a>
+<a class="badge badge-light" href=/bib/tag/linear-logic/>linear logic</a>
+<a class="badge badge-light" href=/bib/tag/hybrid/>hybrid</a>
+<a class="badge badge-light" href=/bib/tag/higher-order-abstract-syntax/>higher-order abstract syntax</a>
+<a class="badge badge-light" href=/bib/tag/coq/>coq</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Ross2015/>Algebraic and Logical Methods in Quantum Computation</a></li>
+<li><a href=/bib/publication/Fu2020a/>A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper</a></li>
+<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
+<li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
+<li><a href=/bib/publication/Green2013/>Quipper: A Scalable Quantum Programming Language</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
