deploy: QuantumPL/site@59ce9375f313ee23ad3d5946e404a34feaf11cef

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 <a href=/bib/tag/formal-verification/ style=font-size:.9420196242234365rem>formal verification</a>
 <a href=/bib/tag/hoare-logic/ style=font-size:1.2190618439911631rem>hoare logic</a>
 <a href=/bib/tag/programming-languages/ style=font-size:1.2961441912542608rem>programming languages</a>
-<a href=/bib/tag/quantum-circuits/ style=font-size:.7rem>quantum circuits</a>
+<a href=/bib/tag/proto-quipper-m/ style=font-size:.7rem>proto-quipper-m</a>
 <a href=/bib/tag/quantum-computation/ style=font-size:1.3675112977721455rem>quantum computation</a>
 <a href=/bib/tag/quantum-computing/ style=font-size:1.963655489026406rem>quantum computing</a>
 <a href=/bib/tag/quantum-programming/ style=font-size:1.1352685619808844rem>quantum programming</a>
