--- a/publication/Lee2021/index.html
+++ b/publication/Lee2021/index.html
@@ -188,10 +188,10 @@ Conference paper
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
+<li><a href=/bib/publication/Lindenhovius2018/>Enriching a Linear/Non-Linear Lambda Calculus: A Programming Language for String Diagrams</a></li>
 <li><a href=/bib/publication/Kornell2021/>Quantum CPOs</a></li>
 <li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
-<li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
 </ul>
 </div>
 </div>
