--- a/publication/Lindenhovius2018/index.html
+++ b/publication/Lindenhovius2018/index.html
@@ -131,6 +131,9 @@
 <span class=article-date>
 July 2018
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Quipper/>Quipper</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Lindenhovius2018/cite.bib>
@@ -182,15 +185,16 @@ Conference paper
 <a class="badge badge-light" href=/bib/tag/enriched-category-theory/>enriched category theory</a>
 <a class="badge badge-light" href=/bib/tag/programming-languages/>programming languages</a>
 <a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
+<a class="badge badge-light" href=/bib/tag/proto-quipper-m/>proto-quipper-m</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
+<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
-<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
-<li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
 </ul>
 </div>
 </div>
