--- a/retro/bbt_bib.html
+++ b/retro/bbt_bib.html
@@ -669,7 +669,7 @@
   series = {Electronic Notes in Theoretical Computer Science},
   volume = {270},
   pages = {165--174},
-  doi = {<a href="https://doi.org/10.1016/j.entcs.2011.01.015">https://doi.org/10.1016/j.entcs.2011.01.015</a>},
+  doi = {10.1016/j.entcs.2011.01.015},
   archiveprefix = {arXiv},
   eprint = {0806.2735},
   abstract = {This paper gives an introduction to and overview of the functional quantum programming language QML. The syntax of this language is defined and explained, along with a new QML definition of the quantum teleport algorithm. The categorical operational semantics of QML is also briefly introduced, in the form of annotated quantum circuits. This definition leads to a denotational semantics, given in terms of superoperators. Finally, an implementation in Haskell of the semantics for QML is presented as a compiler. The compiler takes QML programs as input, which are parsed into a Haskell datatype. The output from the compiler is either a quantum circuit (operational), an isometry (pure denotational) or a superoperator (impure denotational). Orthogonality judgements and problems with coproducts in QML are also discussed.},
@@ -1172,7 +1172,7 @@
   archiveprefix = {arXiv},
   eprint = {1804.09822},
   abstract = {Linear/non-linear (LNL) models, as described by Benton, soundly model a LNL term calculus and LNL logic closely related to intuitionistic linear logic. Every such model induces a canonical enrichment that we show soundly models a LNL lambda calculus for string diagrams, introduced by Rios and Selinger (with primary application in quantum computing). Our abstract treatment of this language leads to simpler concrete models compared to those presented so far. We also extend the language with general recursion and prove soundness. Finally, we present an adequacy result for the diagram-free fragment of the language which corresponds to a modified version of Benton and Wadler's adjoint calculus with recursion.},
-  keywords = {categorical semantics, string diagrams, enriched category theory, programming languages, quantum computing}
+  keywords = {categorical semantics, string diagrams, enriched category theory, programming languages, quantum computing, proto-quipper-m}
 }
 </pre>
 
