--- a/publication/Grattage2011/index.html
+++ b/publication/Grattage2011/index.html
@@ -134,7 +134,7 @@ February 2011
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Grattage2011/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header" href=https://doi.org/https://doi.org/10.1016/j.entcs.2011.01.015 target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1016/j.entcs.2011.01.015 target=_blank rel=noopener>
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/0806.2735 target=_blank rel=noopener>
