--- a/publication/Rios2021/index.html
+++ b/publication/Rios2021/index.html
@@ -177,8 +177,8 @@ Thesis
 <li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
+<li><a href=/bib/publication/Lindenhovius2018/>Enriching a Linear/Non-Linear Lambda Calculus: A Programming Language for String Diagrams</a></li>
 <li><a href=/bib/publication/Green2013/>Quipper: A Scalable Quantum Programming Language</a></li>
-<li><a href=/bib/publication/Ross2015/>Algebraic and Logical Methods in Quantum Computation</a></li>
 </ul>
 </div>
 </div>
