--- a/publication/index.html
+++ b/publication/index.html
@@ -3632,7 +3632,7 @@ This paper gives an introduction to and overview of the functional quantum progr
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Grattage2011/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/https://doi.org/10.1016/j.entcs.2011.01.015 target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.entcs.2011.01.015 target=_blank rel=noopener>
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/0806.2735 target=_blank rel=noopener>
