deploy: QuantumPL/site@a96dc91bcdcd7722446dd46b415b90fc6eb630c2

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -212,6 +212,12 @@ Quantum computers are available to use over the cloud, but the recent explosion 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></h2>
+<div class=article-style>
+This report documents the program and the outcomes of Dagstuhl Seminar 18381 "Quantum Programming Languages", which brought together researchers from quantum computing and classical programming languages.
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Unruh2019/>Quantum Relational Hoare Logic</a></h2>
 <div class=article-style>
 We present a logic for reasoning about pairs of interactive quantum programs -- quantum relational Hoare logic (qRHL). This logic follows the spirit of probabilistic relational Hoare logic (Barthe et al. 2009) and allows us to formulate how the …
