--- a/publication/index.html
+++ b/publication/index.html
@@ -804,6 +804,39 @@ arXiv
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Paradis2021/>Unqomp: Synthesizing Uncomputation in Quantum Circuits</a>
+</div>
+<a href=/bib/publication/Paradis2021/ class=summary-link>
+<div class=article-style>
+A key challenge when writing quantum programs is the need for uncomputation: temporary values produced during the computation must be …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Anouk-Paradis/>Anouk Paradis</a></span>, <span>
+<a href=/bib/author/Benjamin-Bichsel/>Benjamin Bichsel</a></span>, <span>
+<a href=/bib/author/Samuel-Steffen/>Samuel Steffen</a></span>, <span>
+<a href=/bib/author/Martin-Vechev/>Martin Vechev</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Paradis2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3453483.3454040 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a>
 </div>
 <a href=/bib/publication/Singhal2021/ class=summary-link>
@@ -1898,7 +1931,7 @@ arXiv
 </div>
 </div>
 </div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2019">
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2019">
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
