deploy: QuantumPL/site@85be9558e93ffdd5827726bca0150174d67c1558

--- a/404.html
+++ b/404.html
@@ -127,7 +127,7 @@
 <li><a href=/bib/publication/>Publications</a></li>
 <li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
 <li><a href=/bib/event/>Recent & Upcoming Events</a></li>
-<li><a href=/bib/event/pop22/>Quantum at POPL 2022</a></li>
+<li><a href=/bib/event/popl22/>Quantum at POPL 2022</a></li>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
 <li><a href=/bib/publication/Jia2022/>Semantics for Variational Quantum Programming</a></li>
 <li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
