--- a/event/index.html
+++ b/event/index.html
@@ -131,9 +131,9 @@
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/event/pop22/>Quantum at POPL 2022</a>
+<a href=/bib/event/popl22/>Quantum at POPL 2022</a>
 </div>
-<a href=/bib/event/pop22/ class=summary-link>
+<a href=/bib/event/popl22/ class=summary-link>
 <div class=article-style>
 Four quantum PL papers at POPL 2022.
 </div>
