deploy: QuantumPL/site@a57effcae18cf7ec09b4f8e1ae77b6c58d998f92

--- a/publication/index.html
+++ b/publication/index.html
@@ -413,7 +413,7 @@ The increasing control complexity of Noisy Intermediate-Scale Quantum (NISQ) sys
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/The-Quingo-Development-Team/>The Quingo Development Team</a></span>
+<a href=/bib/author/Quingo-Development-Team/>{Quingo Development Team}</a></span>
 </div>
 </div>
 <div class=btn-links>
