deploy: QuantumPL/site@6d516785059aebb156a8d2e31db08d78526350b8

--- a/event/popl22/index.html
+++ b/event/popl22/index.html
@@ -175,7 +175,7 @@ Jan 20, 2022 9:20 AM &mdash; 11:00 AM
 <li><a href=../../publication/Jia2022>Semantics for Variational Quantum Programming</a> by Xiaodong Jia, Andre Kornell, Bert Lindenhovius, Michael Mislove, Vladimir Zamdzhiev</li>
 </ul>
 <p>All of these papers have been added to bibliography including their appendices and expanded versions for your convenience:</p>
-<p><img src=screenshot.png alt></p>
+<p><img src=screenshot.png alt="Screenshot of the four POPL papers on this site"></p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/popl/>popl</a>
