--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Dec 22, 2021
 </div>
 <a href=/bib/post/pronunciation-guide/ class=summary-link>
 <div class=article-style>
-<p>Project Name Pronounced as IQu haiku LIQ$Ui|\rangle$ liquid OpenQASM open chasm PLanQC plank / Planck PyQuil pie-quill PyZX pizzix (like physics) Q# Q-Sharp QASM chasm Qbricks Q-bricks / Kubrick&rsquo;s Qiskit kiss-kit AND quiss-kit1 Quil quill QWIRE choir Silq silk SQIR squire t$|$ket$\rangle$ ticket VOQC vox ZX zed ex Bonus: Michael Nielsen and Isaac Chuang&rsquo;s classic textbook Quantum Computation and Quantum Information is affectionately known as Mike and Ike.</p>
+<p>Project Name | Pronounced as :&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;:|:&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;-: IQu | haiku LIQ$Ui|\rangle$ | liquid OpenQASM | open chasm PLanQC | plank / Planck PyQuil | pie-quill PyZX | pizzix (like physics) Q# | Q-Sharp QASM | chasm Qbricks | Q-bricks / Kubrick&rsquo;s Qiskit | kiss-kit AND quiss-kit1 Quil | quill QWIRE | choir Silq | silk SQIR | squire t$|$ket$\rangle$ | ticket VOQC | vox ZX | zed ex</p>
 </div>
 </a>
 </div>
