deploy: QuantumPL/site@99305b8478f4c78af776b06d25eb72b4a95a005b

--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -206,6 +206,12 @@ We introduce an abstract machine architecture for classical/quantum computations
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Rand2016/>Verification Logics for Quantum Programs</a></h2>
+<div class=article-style>
+We survey the landscape of Hoare logics for quantum programs. We review three papers: "Reasoning about imperative quantum programs" by Chadha, Mateus and Sernadas; "A logic for formal verification of quantum programs" by Yoshihiko Kakutani; and …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Ying2014a/>Quantum Recursion and Second Quantisation</a></h2>
 <div class=article-style>
 This paper introduces a new notion of quantum recursion of which the control flow of the computation is quantum rather than classical as in the notions of recursion considered in the previous studies of quantum programming. A typical example is …
