--- a/retro/bbt_abstracts.html
+++ b/retro/bbt_abstracts.html
@@ -442,7 +442,7 @@ Christophe Chareton, S&eacute;bastien Bardin, Dongho Lee, Beno&icirc;t Valiron,
 [&nbsp;<a href="bbt_bib.html#Chareton2021a">bib</a>&nbsp;| 
 <a href="http://arxiv.org/abs/2109.06493">arXiv</a>&nbsp;]
 <blockquote>
-While recent progress in quantum hardware open the door for significant speedup in certain key areas (cryptography, biology, chemistry, optimization, machine learning, etc), quantum algorithms are still hard to implement right, and the validation of such quantum programs is achallenge. Moreover, importing the testing and debugging practices at use in classical programming is extremely difficult in the quantum case, due to the destructive aspect of quantum measurement. As an alternative strategy, formal methods are prone to play a decisive role in the emerging field of quantum software. Recent works initiate solutions for problems occurring at every stage of the development process: high-level program design, implementation, compilation, etc. We review the induced challenges for an efficient use of formal methods in quantum computing and the current most promising research directions.
+While recent progress in quantum hardware open the door for significant speedup in certain key areas (cryptography, biology, chemistry, optimization, machine learning, etc), quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. Moreover, importing the testing and debugging practices at use in classical programming is extremely difficult in the quantum case, due to the destructive aspect of quantum measurement. As an alternative strategy, formal methods are prone to play a decisive role in the emerging field of quantum software. Recent works initiate solutions for problems occurring at every stage of the development process: high-level program design, implementation, compilation, etc. We review the induced challenges for an efficient use of formal methods in quantum computing and the current most promising research directions.
 </blockquote>
 
 </td>
@@ -1232,7 +1232,7 @@ Ali Javadi-Abhari, Arvin Faruque, Mohammad&nbsp;Javad Dousti, Lukas Svec, Oana
   Frederic&nbsp;T. Chong, Margaret Martonosi, Martin Suchara, Ken Brown, Massoud
   Pedram, and Todd Brun.
  <b>Scaffold: Quantum Programming Language</b>.
- Technical report, Princeton University, June 2012.
+ Technical Report TR-934-12, Princeton University, June 2012.
 [&nbsp;<a href="bbt_bib.html#JavadiAbhari2012">bib</a>&nbsp;| 
 <a href="https://www.cs.princeton.edu/research/techreps/TR-934-12">https</a>&nbsp;]
 <blockquote>
@@ -1961,8 +1961,7 @@ Keywords: nisq, quantum compilation, timing control, quantum programming framewo
 </td>
 <td class="bibtexitem">
 Robert Rand.
- <b>Verification Logics for Quantum Programs</b>.
- Technical report, University of Pennsylvania, March 2016.
+ <b>Verification Logics for Quantum Programs</b>, March 2016.
  Submitted as a qualifying examination (WPE-II) for the PhD program at
   the University of Pennsylvania.
 [&nbsp;<a href="bbt_bib.html#Rand2016">bib</a>&nbsp;| 
