--- a/retro/bbt_bib.html
+++ b/retro/bbt_bib.html
@@ -371,7 +371,7 @@
   month = sep,
   archiveprefix = {arXiv},
   eprint = {2109.06493},
-  abstract = {While recent progress in quantum hardware open the door for significant speedup in certain key areas (cryptography, biology, chemistry, optimization, machine learning, etc), quantum algorithms are still hard to implement right, and the validation of such quantum programs is achallenge. Moreover, importing the testing and debugging practices at use in classical programming is extremely difficult in the quantum case, due to the destructive aspect of quantum measurement. As an alternative strategy, formal methods are prone to play a decisive role in the emerging field of quantum software. Recent works initiate solutions for problems occurring at every stage of the development process: high-level program design, implementation, compilation, etc. We review the induced challenges for an efficient use of formal methods in quantum computing and the current most promising research directions.},
+  abstract = {While recent progress in quantum hardware open the door for significant speedup in certain key areas (cryptography, biology, chemistry, optimization, machine learning, etc), quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. Moreover, importing the testing and debugging practices at use in classical programming is extremely difficult in the quantum case, due to the destructive aspect of quantum measurement. As an alternative strategy, formal methods are prone to play a decisive role in the emerging field of quantum software. Recent works initiate solutions for problems occurring at every stage of the development process: high-level program design, implementation, compilation, etc. We review the induced challenges for an efficient use of formal methods in quantum computing and the current most promising research directions.},
   note = {To appear as Chapter ``Formal methods for Quantum Algorithms'' in ``Handbook of Formal Analysis and Verification in Cryptography'', CRC},
   webnote = {To appear as Chapter ``Formal methods for Quantum Algorithms'' in ``Handbook of Formal Analysis and Verification in Cryptography'', CRC.},
   bibsource = {Quantum Programming Languages \& Verification Bibliography, https://git.io/qpl-bib}
@@ -1041,6 +1041,7 @@
   month = jun,
   institution = {{Princeton University}},
   url = {<a href="https://www.cs.princeton.edu/research/techreps/TR-934-12">https://www.cs.princeton.edu/research/techreps/TR-934-12</a>},
+  number = {TR-934-12},
   abstract = {Quantum computing is of significant research interest because of its potential to radically alter the performance and asymptotic complexity of certain computations. Over the years, physicists have explored possibilities for how to implement quantum bits and logic devices in hardware. At a higher level, mathematicians and algorithmicists have explored how to express computational problems from diverse fields---such as cryptography, chemical systems simulation, and database search---in terms of mathematical equations potentially implementable in quantum hardware.
 
                  For quantum computing to become potentially viable however, research must also make inroads regarding the implementation, compilation, and architectural issues that lie between high-level mathematical algorithm expressions and low-level physical implementations. In particular, we need tools and analysis techniques that can---for a given algorithm and potential physical implementation technology---answer questions like: how much would it cost (i.e., how much resource in terms of qubits, gates, time are required?) to implement the algorithm in this technology? What is its performance potential? Is it scalable? Are there more algorithms that offer such speedups over classical computers?
@@ -1650,7 +1651,7 @@
 </pre>
 
 <a name="Rand2016"></a><pre>
-@techreport{<a href="bbt.html#Rand2016">Rand2016</a>,
+@misc{<a href="bbt.html#Rand2016">Rand2016</a>,
   title = {Verification {{Logics}} for {{Quantum Programs}}},
   author = {Rand, Robert},
   year = {2016},
