deploy: QuantumPL/site@7991246be9c5f243db788ac62317deb9202b1832

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -230,6 +230,12 @@ qPCF is a paradigmatic quantum programming language that extends PCF with quantu
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Zorzi2019/>Quantum Calculi---From Theory to Language Design</a></h2>
+<div class=article-style>
+In the last 20 years, several approaches to quantum programming have been introduced. In this survey, we focus on the QRAM (Quantum Random Access Machine) architectural model. We explore the twofold perspective (theoretical and concrete) of the …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/LaRose2019/>Overview and Comparison of Gate Level Quantum Software Platforms</a></h2>
 <div class=article-style>
 Quantum computers are available to use over the cloud, but the recent explosion of quantum software platforms can be overwhelming for those deciding on which to use. In this paper, we provide a current picture of the rapidly evolving quantum …
