--- a/publication/index.html
+++ b/publication/index.html
@@ -1705,6 +1705,36 @@ URL
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Zorzi2019/>Quantum Calculi---From Theory to Language Design</a>
+</div>
+<a href=/bib/publication/Zorzi2019/ class=summary-link>
+<div class=article-style>
+In the last 20 years, several approaches to quantum programming have been introduced. In this survey, we focus on the QRAM (Quantum …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Margherita-Zorzi/>Margherita Zorzi</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Zorzi2019/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.3390/app9245472 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Paolini2019a/>QPCF: Higher-Order Languages and Quantum Circuits</a>
 </div>
 <a href=/bib/publication/Paolini2019a/ class=summary-link>
